--- a/GeoTenX/View/Base.lproj/Main.storyboard
+++ b/GeoTenX/View/Base.lproj/Main.storyboard
@@ -194,8 +194,8 @@
                         <outlet property="detailButton" destination="vIb-Yc-Bz3" id="CeW-LR-qaf"/>
                         <outlet property="mapView" destination="kux-Si-6aP" id="e2H-SY-oVu"/>
                         <outlet property="pointOfInterestTableView" destination="Fda-6v-le3" id="XFp-82-Zan"/>
-                        <segue destination="JYE-4a-cUT" kind="show" identifier="addPlaceSegue" id="EeS-mj-2Lu"/>
                         <segue destination="ehb-6T-eO9" kind="show" identifier="detailSegue" id="Mee-qL-nvc"/>
+                        <segue destination="TfQ-7e-J9s" kind="show" identifier="acctTypesSegue" id="DxE-K1-6qd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yUP-SQ-6tP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -464,6 +464,82 @@
             </objects>
             <point key="canvasLocation" x="5272.8000000000002" y="869.41529235382313"/>
         </scene>
+        <!--Acct Types View Controller-->
+        <scene sceneID="nqv-b4-ZE3">
+            <objects>
+                <tableViewController id="TfQ-7e-J9s" customClass="AcctTypesViewController" customModule="GeoTenX" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="lze-8A-0u2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="labelCell" id="94D-iT-Yr2">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="94D-iT-Yr2" id="kgq-6K-NbL">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="TfQ-7e-J9s" id="K3i-aR-ykm"/>
+                            <outlet property="delegate" destination="TfQ-7e-J9s" id="SPe-PW-X17"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <segue destination="A5Q-S4-bPO" kind="show" identifier="addPlaceSegue" id="Meb-5S-tzT"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z08-Df-WtK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4401" y="-842"/>
+        </scene>
+        <!--New Place View Controller-->
+        <scene sceneID="IlV-bW-9Ru">
+            <objects>
+                <viewController id="A5Q-S4-bPO" customClass="NewPlaceViewController" customModule="GeoTenX" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="R8I-42-4qa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="qjx-AN-Qds">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="333.5"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="333.5" id="h1Z-13-9le"/>
+                                </constraints>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ReQ-SK-OJa" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="333.5" width="375" height="333.5"/>
+                                <color key="backgroundColor" red="1" green="0.93284638289999999" blue="0.17201563759999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="333.5" id="AqD-qK-ki0"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ReQ-SK-OJa" firstAttribute="bottom" secondItem="hJD-TZ-AYS" secondAttribute="bottom" id="2BB-9Q-EeV"/>
+                            <constraint firstItem="ReQ-SK-OJa" firstAttribute="trailing" secondItem="hJD-TZ-AYS" secondAttribute="trailing" id="4cm-nh-OiZ"/>
+                            <constraint firstItem="ReQ-SK-OJa" firstAttribute="top" secondItem="qjx-AN-Qds" secondAttribute="bottom" id="6y1-i9-dV4"/>
+                            <constraint firstItem="qjx-AN-Qds" firstAttribute="trailing" secondItem="hJD-TZ-AYS" secondAttribute="trailing" id="Kej-qw-qic"/>
+                            <constraint firstItem="ReQ-SK-OJa" firstAttribute="top" secondItem="qjx-AN-Qds" secondAttribute="bottom" id="hNG-LD-3B8"/>
+                            <constraint firstItem="ReQ-SK-OJa" firstAttribute="leading" secondItem="hJD-TZ-AYS" secondAttribute="leading" id="nXi-BX-MtS"/>
+                            <constraint firstItem="qjx-AN-Qds" firstAttribute="leading" secondItem="hJD-TZ-AYS" secondAttribute="leading" id="ndh-iJ-VUi"/>
+                            <constraint firstItem="qjx-AN-Qds" firstAttribute="top" secondItem="R8I-42-4qa" secondAttribute="top" id="o16-93-N9R"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="hJD-TZ-AYS"/>
+                    </view>
+                    <connections>
+                        <outlet property="newPlaceMapView" destination="ReQ-SK-OJa" id="PXS-Im-Boc"/>
+                        <outlet property="tableView" destination="qjx-AN-Qds" id="BbQ-2j-1yM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vuU-dA-qii" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5272.8000000000002" y="-842.42878560719646"/>
+        </scene>
         <!--Add Place-->
         <scene sceneID="AAO-iO-OmG">
             <objects>
@@ -473,14 +549,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qau-PN-Y6f" userLabel="AddPlaceMapView" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="365" width="375" height="302"/>
+                                <rect key="frame" x="0.0" y="343" width="375" height="324"/>
                                 <color key="backgroundColor" red="1" green="0.93284638289999999" blue="0.17201563759999999" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M63-qa-XcM" userLabel="Place">
-                                <rect key="frame" x="0.0" y="64" width="375" height="301.5"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="323.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akv-Lj-OuR">
-                                        <rect key="frame" x="0.0" y="278.5" width="375" height="23"/>
+                                        <rect key="frame" x="0.0" y="298.5" width="375" height="25"/>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <state key="normal" title="ADD PLACE">
@@ -491,50 +567,50 @@
                                         </connections>
                                     </button>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KHx-5h-9K5">
-                                        <rect key="frame" x="8" y="224" width="359" height="46"/>
+                                        <rect key="frame" x="8" y="239.5" width="359" height="50.5"/>
                                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jg0-kj-7ss">
-                                        <rect key="frame" x="8" y="196" width="359" height="23"/>
+                                        <rect key="frame" x="8" y="209" width="359" height="25.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jrA-qJ-e6g">
-                                        <rect key="frame" x="8" y="108" width="359" height="23"/>
+                                        <rect key="frame" x="8" y="115" width="359" height="25.5"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kni-6C-74N" userLabel="Customer Text Field">
-                                        <rect key="frame" x="8" y="46" width="359" height="23.5"/>
+                                        <rect key="frame" x="8" y="48" width="359" height="25.5"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8pa-Xx-pfQ">
-                                        <rect key="frame" x="8" y="165.5" width="359" height="22.5"/>
+                                        <rect key="frame" x="8" y="176.5" width="359" height="24.5"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0kS-0T-0Ei">
-                                        <rect key="frame" x="8" y="139" width="359" height="23.5"/>
+                                        <rect key="frame" x="8" y="148.5" width="359" height="25"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of the place you are currently at:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LYV-kP-9wP">
-                                        <rect key="frame" x="8" y="80.5" width="359" height="22.5"/>
+                                        <rect key="frame" x="8" y="84.5" width="359" height="25.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Customer Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Q1-c3-g7O">
-                                        <rect key="frame" x="8" y="15" width="359" height="23"/>
+                                        <rect key="frame" x="8" y="15" width="359" height="25"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -595,16 +671,10 @@
                         <viewLayoutGuide key="safeArea" id="TaJ-Tm-QuP"/>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Title" id="Tgd-oM-8x4">
-                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="AKp-Yh-MFz">
-                            <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <connections>
-                                <action selector="searchPlace:" destination="JYE-4a-cUT" id="VDr-0x-Jvh"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Title" id="Tgd-oM-8x4"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="PlaceFieldsView" destination="M63-qa-XcM" id="EGI-oj-kKI"/>
                         <outlet property="addressTextView" destination="KHx-5h-9K5" id="Rui-Pp-uUh"/>
                         <outlet property="customerTextField" destination="Kni-6C-74N" id="kOv-SZ-OZ8"/>
                         <outlet property="newPlacMapView" destination="Qau-PN-Y6f" id="4Qc-nF-1eH"/>
