--- a/GeoTenX/View/CustomCell/DetailsCell.xib
+++ b/GeoTenX/View/CustomCell/DetailsCell.xib
@@ -6,7 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,42 +21,41 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NcH-ey-r0Z">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k58-I9-STP">
-                                <rect key="frame" x="8" y="0.0" width="312" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="k58-I9-STP" secondAttribute="height" multiplier="78:5" id="fyk-tR-OFR"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k58-I9-STP">
+                                <rect key="frame" x="8" y="0.0" width="99" height="44"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="L9A-c8-yCG">
-                                <rect key="frame" x="8" y="20" width="312" height="24"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="L9A-c8-yCG">
+                                <rect key="frame" x="107" y="0.0" width="206" height="44"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="k58-I9-STP" secondAttribute="trailing" id="6kr-kr-9s7"/>
-                            <constraint firstItem="L9A-c8-yCG" firstAttribute="top" secondItem="k58-I9-STP" secondAttribute="bottom" id="EWi-Rp-Imi"/>
-                            <constraint firstAttribute="trailing" secondItem="L9A-c8-yCG" secondAttribute="trailing" id="EYd-5Z-YLh"/>
-                            <constraint firstItem="L9A-c8-yCG" firstAttribute="leading" secondItem="NcH-ey-r0Z" secondAttribute="leading" constant="8" id="X7N-GT-bxc"/>
-                            <constraint firstAttribute="bottom" secondItem="L9A-c8-yCG" secondAttribute="bottom" id="adI-5o-YOd"/>
-                            <constraint firstItem="k58-I9-STP" firstAttribute="leading" secondItem="NcH-ey-r0Z" secondAttribute="leading" constant="8" id="e02-eZ-GWq"/>
-                            <constraint firstItem="k58-I9-STP" firstAttribute="top" secondItem="NcH-ey-r0Z" secondAttribute="top" id="eCW-kR-PjM"/>
+                            <constraint firstAttribute="bottom" secondItem="k58-I9-STP" secondAttribute="bottom" id="31o-be-o0u"/>
+                            <constraint firstItem="k58-I9-STP" firstAttribute="leading" secondItem="NcH-ey-r0Z" secondAttribute="leading" constant="8" id="5Y8-8l-uYZ"/>
+                            <constraint firstItem="L9A-c8-yCG" firstAttribute="width" secondItem="k58-I9-STP" secondAttribute="width" multiplier="2" constant="8" id="Bho-3e-61N"/>
+                            <constraint firstItem="L9A-c8-yCG" firstAttribute="top" secondItem="NcH-ey-r0Z" secondAttribute="top" id="Dz8-7Z-7EY"/>
+                            <constraint firstAttribute="trailing" secondItem="L9A-c8-yCG" secondAttribute="trailing" constant="7" id="L3e-nu-R0X"/>
+                            <constraint firstItem="k58-I9-STP" firstAttribute="top" secondItem="NcH-ey-r0Z" secondAttribute="top" id="ShV-Hv-fd0"/>
+                            <constraint firstAttribute="bottom" secondItem="L9A-c8-yCG" secondAttribute="bottom" id="TC8-30-qB5"/>
+                            <constraint firstItem="L9A-c8-yCG" firstAttribute="leading" secondItem="k58-I9-STP" secondAttribute="trailing" id="usk-4f-EhV"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="NcH-ey-r0Z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Evg-40-H28"/>
-                    <constraint firstItem="NcH-ey-r0Z" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Gzv-r2-ddZ"/>
-                    <constraint firstAttribute="bottom" secondItem="NcH-ey-r0Z" secondAttribute="bottom" id="feb-Ww-eNw"/>
-                    <constraint firstAttribute="trailing" secondItem="NcH-ey-r0Z" secondAttribute="trailing" id="uTD-vS-yB7"/>
+                    <constraint firstAttribute="bottom" secondItem="NcH-ey-r0Z" secondAttribute="bottom" id="1hd-ZP-otD"/>
+                    <constraint firstAttribute="trailing" secondItem="NcH-ey-r0Z" secondAttribute="trailing" id="2Ow-lt-qmm"/>
+                    <constraint firstItem="NcH-ey-r0Z" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Y1t-gx-q12"/>
+                    <constraint firstItem="NcH-ey-r0Z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="dcS-CF-6DU"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
